# Omega

./: .claude-preflight.sh  .gitignore  ARCHITECTURE_DO_NOT_TOUCH.md  AUDIT_RESULTS.md  AUDIT_S15_ENGINES.md  AUDIT_S15_P0_FINDINGS.md  AUDIT_S16_P1_1_LEDGER_TRACE.md  AUDIT_S16_P1_2_VWAPREVERSION_TRACE.md  AUDIT_S18_P1_CLOSEOUTS.md  BACKTEST.md  BASELINE_REPORT.ps1  CHOSEN.md  CLAUDE.md  CLEAR_AND_VERIFY.ps1  CMakeLists.txt  DEPLOYMENT.md  DEPLOY_OMEGA.ps1  DEPLOY_P3B.sh  DEPLOY_S12_ISSUE_3A.sh  DEPLOY_S12_PHASE_CD.sh  DEPLOY_S12_PS1_CONSOLIDATION.sh  ENGINE_AUDIT_CHECKLIST.md  ENGINE_REGISTRY.md  FIX_BLACKBULL_CONSTRAINTS.md  FIX_SSH.ps1  HANDOFF_FVG_BACKTEST.md  HANDOFF_S13_CTRADER_CULL.md  HANDOFF_S14_POST_CTRADER_CULL.md  HANDOFF_S15_ENGINE_AUDIT.md  HANDOFF_S16_AFTER_S15_P0_FIXES.md  HANDOFF_S17_AFTER_S16_P1_TRACES.md  HANDOFF_S18_AFTER_S17_FIXES.md  HANDOFF_S19_AFTER_S18_CLOSEOUTS.md  HANDOFF_S20_AFTER_S19_MICROSCALPER.md  HANDOFF_S21_AFTER_S20_RISK_MONITOR.md  HANDOFF_S22_DEEPSTRIKE_LIVE.md  HANDOFF_S25_UNIVERSAL_HEDGING.md  HANDOFF_S26_PART3.md  HANDOFF_S27_AFTER_S26_PART4.md  HANDOFF_S28_AFTER_S27.md  (+95 more)
.claude/: MEMORY.md  PLUGINS.md  settings.json
analysis/: d1_csv_scan.py
api/: MetricsExporter.hpp  MetricsServer.hpp
backtest/: AUDITED_CONFIGS.tsv  AURUM_BREAKPULLBACK_AUDIT_2026-07-20.md  BACKTEST_TRUTH.md  BIGCAP45_ENGINE_SCAN_FINDINGS_2026-07-17.md  BIGCAP_RDAGENT_FULLTEST_2026-07-20.md  BIGCAP_XS_MOMENTUM_FINDINGS_2026-07-17.md  BULLGATE_PROTECTION_SWEEPS_2026-07-23.md  BtBarEngine.hpp  CMakeListsAddendum.txt  CONCURRENCY.md  CONNORS_REVALIDATE_2026-07-21.md  CONNORS_WIDESTOP_FINDINGS_2026-07-17.md  CULL_2026-06-19_disabled_purge.md  CULL_LEDGER.tsv  CULL_S13_LATENCY_EDGE.md  CULL_S13_MCE_REVERT.md  CULL_S13_ORPHANS.md  CULL_TIER1_S12.md  DATA_ACQUISITION_SPEC.md  ENGINE_BACKTEST_REGISTRY.md  EdgeDiscovery  EdgeDiscovery.cpp  EmaPullbackBacktest.cpp  FAIL_VERDICTS.tsv  FINDING_E_CULL.md  FX_CATCHUP_OUTAGE_CERT_2026-07-18.md  GOLDBULLTRENDGATED_MULTIWINDOW_2026-07-20.md  GOLDDON10M_LIVE_LEDGER_AUDIT_2026-07-20.md  GOLDMIMIC_CATCHUP_CERT_2026-07-18.md  GOLDMIMIC_HONEST_RECERT_2026-07-20.md  GOLDTREND_REVALIDATE_2026-07-21.md  GOLD_ANYRANGE_CBE_FINDINGS_2026-07-23.md  GOLD_DAILY_CBE_FINDINGS_2026-07-22.md  GOLD_LONGSHORT_VIABLE_2026-07-20.md  GOLD_MR_10M_FINDINGS_2026-07-15.md  GOLD_NEWENGINE_MIMICS_FINDINGS.md  GOLD_SESSION_TP_FINDINGS_2026-07-14.md  GOLD_SHORTTF_BOTHWAYS_2026H1_FINDINGS.md  GOLD_STRUCTURAL_CAMPAIGN_FINDINGS_2026-07-13.md  GOLD_SUB30M_2026H1_FINDINGS.md  (+698 more)
bracket-bot/: .gitignore  HANDOFF.md  README.md  requirements.txt  server.py
cmake/: UpdateGitHash.cmake  WriteStamp.cmake
config/: chimera.ini  config.json  omega_config.ini  symbols.ini
core/: LatencyStats.hpp  Logger.cpp  Logger.hpp  MonotonicClock.hpp  SPSCQueue.hpp  ThreadPin.hpp
ctrader_cbot/: OmegaDomStreamer.cs  TickScalper.cs
data/: BacktestTickSource.hpp  LiveTickSource.hpp  TickSource.hpp  congress_bigcap.json  exceptional_engines.json  mgc_10m_hist.csv  mgc_15m_hist.csv  mgc_30m_hist.csv  mgc_h1_hist.csv  mgc_h4_hist.csv  ndx_close_hist.csv  spx_close_hist.csv  spy_close_hist.csv
disabled_engines/: GoldMicroScalperEngine.hpp.disabled_2026-05-11
docs/: CELL_ENGINE_REFACTOR_PLAN.md  DESIGN_XAUUSD_FVG_ENGINE.md  DISABLED_ENGINES_INVENTORY.md  ENGINE_AUDIT_2026-05-07.md  IBC_GATEWAY_AUTOSTART.md  INVENTORY_VERIFICATION_2026-05-07.md  POLICY_NO_PYTHON_SWEEPS.md  SESSION_2026-04-30b_HANDOFF.md  SESSION_2026-04-30c_PHASE1_HANDOFF.md  SESSION_2026-05-01_HANDOFF.md  SESSION_2026-05-01b_HANDOFF.md  SESSION_2026-05-01c_HANDOFF.md  SESSION_2026-05-01d_HANDOFF.md  SESSION_2026-05-01e_HANDOFF.md  SESSION_2026-05-01f_HANDOFF.md  SESSION_2026-05-01g_HANDOFF.md  SESSION_2026-05-01h_HANDOFF.md  SESSION_2026-05-02_EURUSD_LONDON_OPEN_HANDOFF.md  SESSION_2026-05-02_FVG_PHASE0_3SYMBOL_HANDOFF.md  SESSION_2026-05-02_FVG_S7_HANDOFF.md  SESSION_2026-05-02_HANDOFF.md  SESSION_2026-05-02_HANDOFF_NEXT.md  SESSION_2026-05-02_USDJPY_ASIAN_OPEN_HANDOFF.md  SESSION_2026-05-02_USDJPY_ASIAN_OPEN_PHASE2_FINE.md  SESSION_2026-05-02_USDJPY_ASIAN_OPEN_TRAIL_FIX.md  SESSION_2026-05-02_USDJPY_ASIAN_OPEN_WALKFORWARD.md  SESSION_2026-05-02_USDJPY_ASIAN_OPEN_WALKFORWARD_HANDOFF.md  SESSION_2026-05-03_BUG3_FIX_DEPLOY.md  SESSION_2026-05-03_ENGINE_AUDIT.md  SESSION_2026-05-03_ENGINE_AUDIT_INSTALLMENT_2.md  SESSION_2026-05-03_FVG_VERIFIER_PASS.md  SESSION_2026-05-03_HANDOFF_NEXT.md  SESSION_2026-05-03_NR2_20_HANDOFF.md  SESSION_2026-05-03_VWAPC_FINALISATION.md  SESSION_2026-05-04_FX_BACKTEST_AUDIT.md  SESSION_2026-05-07_AUDIT_PHASE1_HANDOFF.md  SESSION_2026-05-07_S12_PS1_CONSOLIDATION_HANDOFF.md  SESSION_2026-05-07_S61_HANDOFF.md  VALIDATION_WATCHLIST.md  scratch_encoding_test.hpp
ea/: AtrMeanRevGrid.mq5
engine/: BurstDetector.hpp  EngineConfig.hpp  EngineCore.hpp  EngineHealth.hpp  EngineIngress.hpp  EngineSupervisor.hpp  ExecutionHealth.hpp  ExecutionRouter.hpp  IExecutionRouter.hpp  Intent.hpp  IntentQueue.hpp  NullExecutionRouter.hpp  QueueMetrics.hpp  StrategyRunner.hpp
fvg_phase0_reweight/: comparison_summary.txt
ibkr/: .gitignore  BigCapMomoEngine.cpp  CapitulationDaily.cpp  CapitulationEngine.cpp  GapShortDaily.cpp  GapShortEngine.cpp  IbkrClient.cpp  README.md  RiskManager.hpp  aurora_flow.py  aurora_predicate.py  aurora_snapshot.py  bid64_integer.cpp  bid64_stub.cpp  build.sh  build_msvc.bat  daily_loop.patch.md  gapshort_backtest.cpp  gex_chain.py  gex_gold.py  gex_validate.py  pull_ibkr_ticks.py  register_capitulation_task.ps1  register_gapshort_task.ps1
include/: AccountingGuard.hpp  AdaptiveHullEngine.hpp  AdaptiveTfGoldEngine.hpp  AtrMeanRevGridEngine.hpp  AudusdSydneyOpenEngine.hpp  AuroraGate.hpp  (+290 more)
omega/: .gitignore  CMakeLists.txt  README.md  scan_yesterday.sh  universe.txt
omega/data/: CHOP.csv  SPY.csv  TREND.csv  gen.awk
omega/include/omega/: Backtester.h  Bar.h  CsvLoader.h  IbkrClient.h  Indicators.h  Scanner.h  Strategy.h
omega/src/: Backtester.cpp  CsvLoader.cpp  IbkrClient.cpp  Indicators.cpp  Scanner.cpp  Strategy.cpp  main_backtest.cpp  main_ibkr_fetch.cpp  main_scan.cpp
(+1667 files in other folders)
